# codexia-zen

./: .gitignore  Agents.md  CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
crates/codex_bindings/: Cargo.toml
crates/codex_bindings/src/: codex_discovery.rs  export_bindings.rs  lib.rs
docs/: IMPLEMENTATION.md  chatbox.md  codex-app-server-integration.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  codex.rs  codex_client.rs  codex_integration.rs  commands.rs  config.rs  export_bindings.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/codex/: manager.rs  mod.rs
src-tauri/src/agent/codex/client/: handlers.rs  mod.rs  requests.rs  streams.rs
src-tauri/src/codex/: client.rs  handles.rs  mod.rs  types.rs
src/components/: AppHeader.tsx  ApprovalDialog.tsx  ChatCompose.tsx  ChatInterface.tsx  ChatPanel.tsx  ChatView.tsx  ConversationList.tsx  DeltaEventLog.tsx  EventItem.tsx  EventLog.tsx  InputArea.tsx  Layout.tsx  ProfilePopover.tsx  ReasoningEffortPopover.tsx  Sandbox.tsx  SandboxPolicyPopover.tsx  ThreadList.tsx  provider-models.tsx  top-nav.tsx
src/components/chat/: ApprovalRequestCard.tsx  (+10 more)
src/config/: ConversationParams.ts
src/hooks/: useChatListeners.ts  useChatSession.ts  useCodexEvents.ts  useDeltaEvents.ts
src/pages/: chat-page.tsx  chat.tsx  projects.tsx
src/stores/: useActiveConversationStore.ts  useApprovalStore.ts  useChatStore.ts  useCodexStore.ts  useConfigStore.ts  useConversationListStore.ts  useConversationStore.ts  useEventStore.ts  useLayoutStore.ts  useModelStore.ts  usePageStore.ts  useProviderStore.ts  useSandboxStore.ts  useSessionStore.ts
src/types/: ChatEvent.ts  Message.ts  Message.tsx  chat.ts  index.ts  index.tsx
src/utils/: threadHistoryConverter.ts
(+8 files in other folders)
