[package]
name = "codexia-zen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "11.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.21.3"
anyhow = "1.0"
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "26f7c46856060f440615645bdf2faf9e62c74e72" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "26f7c46856060f440615645bdf2faf9e62c74e72" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
log = "0.4"

[features]
# By default we use `custom-protocol` to enable `tauri-plugin-upload`
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

