[package]
name = "codex_bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "codex_bindings"
path = "src/lib.rs"

[dependencies]
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol" }
ts-rs = "11.0"
log = "0.4"
